--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
     "scripts": {
-        "test": "jest --testMatch '**/?(*.)+(test).js'"
+        "test": "jest"
     },
     "dependencies": {
+        "date-fns": "^2.30.0",
         "rewire": "^6.0.0",
-        "validator": "^13.7.0"
+        "uuid": "^9.0.1",
+        "validator": "^13.11.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.22.5",
         "@babel/core": "^7.22.5",
         "@babel/preset-env": "^7.22.5",
-        "jest": "^28.1.0"
+        "jest": "^28.1.3"
     },
     "type": "module",
     "nyc": {
