--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     },
     "dependencies": {
         "cors": "^2.8.5",
+        "custom-uuid": "^3.0.0",
         "express": "^4.18.0",
         "http-errors": "^2.0.0",
         "morgan": "^1.10.0",
         "rewire": "^6.0.0",
+        "short-uuid": "^4.2.2",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.3",
         "uuid": "^9.0.1",
