--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "morgan": "^1.10.0",
         "rewire": "^6.0.0",
         "short-uuid": "^4.2.2",
+        "sync-request": "^6.1.0",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.3",
         "uuid": "^9.0.1",
