--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "posttest": "npm run cleanup-sync-request || true"
     },
     "dependencies": {
+        "@vercel/kv": "^1.0.0",
         "cors": "^2.8.5",
         "custom-uuid": "^3.0.0",
         "express": "^4.18.0",
